templates/ingress-traefik.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: mytraefik.dashboard
    http:
      paths:
      - path: /index
        pathType: Prefix
        backend:
          serviceName: index
          servicePort: 80
      - path: /cheese
        pathType: Prefix
        backend:
          serviceName: cheese
          servicePort: 80
